Fix offers overflow issue

--- a/core/components/Financing/Financing.scss
+++ b/core/components/Financing/Financing.scss
@@ -71,6 +71,10 @@ $result-section-negative-offset: -32px;
     opacity: 0.5;
     color: initial;
   }
+
+  .offerId {
+    justify-content: flex-start !important;
+  }
 }
 
 .financing-structures-section {
